# atmega328p-on-dht11-and-sh1107g-rs

./: Cargo.toml  README.md  Ravedude.toml  devttyACM0_2025_08_09.13.17.24.361.txt  devttyACM0_2025_08_09.13.47.35.099.txt  devttyACM0_2025_08_22.06.55.47.625.txt  devttyACM0_2025_08_22.07.00.13.837.txt  devttyACM0_2025_08_22.10.33.10.332.txt  devttyACM0_2025_08_22.10.51.00.817.txt  devttyACM0_2025_08_22.10.55.30.618.txt  devttyACM1_2025_08_21.12.03.53.167.txt  devttyACM1_2025_08_23.20.33.12.462.txt  text.txt
.cargo/: config.toml
log/: devttyACM0_2025_08_09.13.32.18.966.txt  devttyACM0_2025_08_22.07.23.16.407.txt  devttyACM0_2025_08_22.10.30.55.360.txt  devttyACM0_2025_08_22.10.50.13.272.txt  devttyACM0_2025_08_22.11.00.06.448.txt  devttyACM0_2025_08_25.03.40.48.380.txt  devttyACM0_2025_08_26.14.09.39.051.txt  devttyACM0_2025_08_26.20.05.19.227.txt  devttyACM0_2025_08_26.20.05.28.166.txt  devttyACM0_2025_08_27.12.17.58.401.txt  devttyACM1_2025_08_21.12.03.40.135.txt  devttyACM1_2025_08_21.12.05.09.067.txt  devttyACM1_2025_08_23.20.29.34.672.txt  devttyACM1_2025_08_23.20.29.42.107.txt  devttyACM1_2025_08_23.21.35.33.274.txt  devttyACM1_2025_08_24.08.20.55.364.txt
src/: example.rs  lib.rs  main.rs
