[package]
name = "atmega328p-on-dht11-and-sh1107g-rs"
version = "0.1.0"
authors = ["Placeless <thinkoverheat@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "atmega328p-on-dht11-and-sh1107g-rs"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "0.2.7"
embedded-dht-rs = "0.5.0"
embedded-graphics = "0.8.1"
dvcdbg = { version = "0.1.0", path = "../dvcdbg", features = ["debug_log"]}

log = "0.4.27"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
heapless = "0.8.0"
embedded-io = "0.6.1"

[dependencies.sh1107g-rs]
path = "../sh1107g-rs"
features = ["debug_log"]

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
