[package]
name = "atmega328p-on-dht11-and-sh1107g-rs"
version = "0.1.0"
authors = ["Placeless <thinkoverheat@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "atmega328p-on-dht11-and-sh1107g-rs"
path = "src/bin/*.rs"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
embedded-graphics = "0.8.1"
heapless = "0.8.0"
nb = "1.1.0"
embedded-hal = "0.2.7"


[dependencies.sh1107g-rs]
path = "../sh1107g-rs"

[dependencies.dvcdbg]
git = "https://github.com/p14c31355/dvcdbg.git"
features = ["ehal_0_2"]

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
