[package]
name = "atmega328p-on-dht11-and-sh1107g-rs"
version = "0.1.0"
authors = ["Placeless <thinkoverheat@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
panic-halt = "1.0.0"
embedded-graphics = "0.8.1"
heapless = "0.9.1"
nb = "1.1.0"
embedded-hal = "0.2.7"
embedded-io = "0.6.1"


[dependencies.sh1107g-rs]
path = "../sh1107g-rs"

[dependencies.dvcdbg]
path = "../dvcdbg"
features = ["ehal_0_2"]
default-features = false

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"

